[project]
name = "promptguard"
version = "0.0.1"
description = "A python package which enables anonymizing prompts and deanonymizing responses via an attested enclave."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
