[project]
name = "promptguard"
version = "0.1.0"
description = "A python package which enables sanitizing prompts and desanitizing responses via an attested enclave."
readme = "README.md"
authors= [{ name = "Opaque Systems", email = "pypi@opaque.co" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
keywords = ["confidential", "llm"]
dependencies = [
    "pyatls",
    "requests >= 2.0",
]

[project.urls]
Homepage = "https://github.com/opaque-systems/promptguard-python"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
