[project]
name = "opaqueprompts"
version = "0.0.5"
description = "The client-side SDK for OpaquePrompts, a privacy layer that enables applications to wrap external provider calls with a sanitization mechanism that hides sensitive inputs via an attested trusted execution environment."
readme = "README.md"
authors= [{ name = "Opaque Systems", email = "pypi@opaque.co" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["confidential", "llm", "ai", "generative", "security", "privacy"]
dependencies = [
    "pyatls >= 0.0.3",
    "requests >= 2.0",
]

[project.urls]
Homepage = "https://github.com/opaque-systems/opaqueprompts-python"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
